--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Big Data for Sustainability Sciences
 author: Dr Elco Koks & Dr Thales Pupo-West
-logo: images/logo.png
+logo: _static/images/logo.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
