--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,4 @@ parse:
     # don't forget to list any other extensions you want enabled,
     # including those that are enabled by default!
     - html_image
+    - colon_fence
