--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ announcement    : "This course is work in progress!" # A banner announcement at 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks:  'off'
+  execute_notebooks:  auto
+  exclude_patterns:
+   - 'week5/tutorial1'
 
 # Define the name of the latex output file for PDF builds
 latex:
