--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -15,11 +15,19 @@ on:
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
+
+
+    
   deploy-book:
     runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+      pages: write
+      
     steps:
     - uses: actions/checkout@v2
-
+    
     # Install dependencies
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
