--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -22,7 +22,9 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write
+    contents: write # We generate static HTML, JS, CSS so we need write access to the repo
+    pages: write
+    id-token: write
       
     steps:
     - uses: actions/checkout@v2
